# YAMA

./: .clang-format  .gitignore  .gitmodules  CmakeLists.txt  LICENSE  NOTICE.md  README.md  build.bat  clean-build.bat  update-build.bat  yara-update-build.bat
.github/workflows/: build.yaml
dependencies/yara/: CMakeLists.txt
rsrc/: resources.h  resources.rc  version.h
rsrc/eventlog/: .gitignore  Yama.Events.h  Yama.Events.man  build.bat
rsrc/ioc/: .gitignore  rule.yara
src/: common.h  etw_provider.cpp  etw_provider.h  file.cpp  file.h  logger.h  main.cpp  memory.cpp  memory.hpp  pid.cpp  pid.h  privilege.cpp  privilege.h  process.cpp  process.hpp  rc4.cpp  rc4.hpp  reporter.cpp  reporter.hpp  resource.cpp  resource.h  scanner_context.cpp  scanner_context.hpp  strutils.cpp  strutils.h  suspicious_process.cpp  suspicious_process.hpp  thread.cpp  thread.hpp  typedef.h  yamascanner.cpp  yamascanner.hpp  yaramanager.cpp  yaramanager.hpp
utils/: arc4.py
